--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
 </head>
 <body>
     <div class="container">  
-        <h2>Navegador:</h2>  
+        <h2>Detectar Navegador:</h2>  
         <div class="logos">  
             <img class="chrome" src="images/chrome.svg" alt="chrome" title="Google Chrome">   
             <img class="firefox" src="images/mozila.svg" alt="firefox" title="Mozilla Firefox">  
             <img class="edge" src="images/edge.svg" alt="edge" title="Microsoft Edge">  
             <img class="opera" src="images/opera.svg" alt="opera" title="Opera">  
             <img class="safari" src="images/safari.svg" alt="safari" title="Apple Safari">  
-        </div>  
+        </div>
+        <p>Estás usando: <span class="navegador"></span></p>  
     </div>
     <script src="./script.js"></script> 
 </body>
-</html>l
+</html>
